--- a/apps/mxspace/data.yml
+++ b/apps/mxspace/data.yml
@@ -5,7 +5,7 @@ title: 开源自部署个人前后端分离博客系统
 type: 建站
 description: 开源自部署个人前后端分离博客系统
 additionalProperties:
-  key: mx-space
+  key: mxspace
   name: Mix-Space
   tags:
     - WebSite
